# OpenEnv-Content-Moderation-Benchmark

./: .env.example  .gitignore  Dockerfile  README.md  client.py  inference.py  inference_openai.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
agent/: gemini_agent.py  openai_agent.py  prompts.py
baseline/: agent.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  BASELINE.md  DATA_MODEL.md  DEPLOYMENT.md  DOCKER.md  FLOW.md  GRADERS.md  POLICY.md  REWARD.md  SPECS.md  TASKS.md  TECH_STACK.md
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  apiClient.js  index.css  utils.js
frontend/src/components/: AgentPanel.jsx  PostCard.jsx  PostPanel.jsx  ScoreCard.jsx  StepTimeline.jsx
frontend/src/data/: scenarios.js
frontend/src/pages/: AnalysisView.jsx  ScenarioExplorer.jsx
policies/: policy_eu.md  policy_india.md  policy_uk.md  policy_us.md
server/: Dockerfile  __init__.py  app.py  data_generator.py  first_rl_demo_environment.py  grader.py  policy_engine.py  reward_engine.py  state_manager.py  tasks.py
tests/: test_api.py
